--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -2,7 +2,7 @@
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688741.md#1" target="_blank">戈壁东：中共在香港的谎言蒙骗不了世界（二）</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688741.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1185090495-600x400-1-150x120.jpg" align ="left"></a>全世界都清楚地知道，香港抗议民众至今从来没有提出过香港独立的政治主张。但是中共却一口咬定，香港的抗议活动是“港独”，并宣称香港出现的是一群分裂主义者。
 
 在信息极其发达的今天，中共为什么会冒着被国际社会耻笑，去撒这样一个完全不存在的谎言？其实它清楚地知道这个谎言骗不了国际社会。中共的目的只是要蒙骗被信息封锁的中国大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:33 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688263.md#1" target="_blank">袁斌：川普签署香港人权法案 中共再演抗议秀</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688263.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1168700468-600x400-1-150x120.jpg" align ="left"></a>感恩节前一天，美东时间11月27日，美国总统川普宣布，他已经将《2019年香港人权与民主法案》和《保护香港法案》签署成为法律。消息一出，立即引爆了国际舆论，港民更在网上互贺，称之是最好的感恩节礼物。但对于乱港祸港的中共而言，这却无异于当头猛击一锤！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:06 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688263.md#1" target="_blank">袁斌：川普签署香港人权法案 中共再演抗议秀</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688263.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/01-9A6A3528_e1-1-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>感恩节前一天，美东时间11月27日，美国总统川普宣布，他已经将《2019年香港人权与民主法案》和《保护香港法案》签署成为法律。消息一出，立即引爆了国际舆论，港民更在网上互贺，称之是最好的感恩节礼物。但对于乱港祸港的中共而言，这却无异于当头猛击一锤！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688639.md#1" target="_blank">郑存柱：美国参众两院提出“反红通”法案</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688639.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c40fd72f3b3ff136e049be83f1129156-150x120.png" align ="left"></a>2019年9月13日，美国众议员黑斯廷斯（Alcee L. Hastings，FL-20）和威尔逊（Joe Wilson，SC-02）在众议院提出了《跨国镇压问责与预防法》（HR.4330，简称TRAP）。9月17日，参议员罗格?威克（Roger Wicker，MS）和本?卡丹（Ben Cardin，MD）也在参议院提.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688202.md#1" target="_blank">【名家专栏】川普受非裔人欢迎 民主党犯难</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688202.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Kanye-Trump-1055562960-1200x812-150x120.jpg" align ="left"></a>尽管很多媒体仍然沉迷于炒作众议院推动的已经日益显出毫无意义的弹劾调查，以及参议院的更被质疑的罢免总统新闻时，真正重要的政治新闻却被悄悄地隐藏了起来。两项最新的民意调查结果显示，美国总统川普（特朗普）现在在非裔美国人中越来越受欢迎，而且这个比例非常可观，甚至可以说是“巨大的”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 7:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688034.md#1" target="_blank">司马泰：谁想搞垮香港？</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/130620082701100311-150x120.jpg" align ="left"></a>1984年邓小平提出香港回归后“一国两制”50年不变。那50年之后怎么办呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 5:24 AM			</td></tr>
