--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690361.md#1" target="_blank">吉林前书记高狄病亡 曾因卷入邓江斗而丢官</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/03/1308262045372039-150x120.jpg" align ="left"></a>中共吉林省委前书记、人民日报社社长高狄，10月26日病亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:33 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690324.md#1" target="_blank">香港法案生效 章家敦：中共若报复或自取灭亡</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690324.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911280849492188-150x120.jpg" align ="left"></a>周三，美国总统川普（特朗普）签署支持香港抗议者的《香港人权与民主法案》，中共恼羞成怒说要报复，美国中国问题专家回应说，中共反应荒谬可笑，且中共若报复，可能会自取灭亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690230.md#1" target="_blank">长沙养老机构爆雷 数百老人被迫停餐</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690230.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/GettyImages-73837087-150x120.jpg" align ="left"></a>近日，湖南长沙多起养老机构“爆雷”，上万人受害，涉案金额十余亿元。爱之心养老公寓的200多名老人曾一度被迫停餐，受害老人指区政府为其“背书、站台”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690302.md#1" target="_blank">地缘政治竞争加剧 中共军队用科研介入北极</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690302.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/09/909050416421758-150x120.jpg" align ="left"></a>丹麦情报机构周五（11月29日）警告说，中共军队越来越多地利用在北极的科学研究作为涉足该地区的途径。报告警告说，在地球冰冻的北极地区，地缘政治竞争正在加剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690153.md#1" target="_blank">六四天网义工胡贵琴进京上访 遭警毒打</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690153.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/page-6-150x120.jpg" align ="left"></a>在京重庆女访民，中国六四天网义工胡贵琴于11月23日下午14时30分许，在中纪委办公楼旁，被一名警号是113735的警察拦截并带到重庆驻京办公室后，对胡贵琴进行毒打长达十余分钟，胡贵琴险些昏死过去。经医检，全身多处软组织受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:28 AM							</td></tr>
@@ -20,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688985.md#1" target="_blank">【拍案惊奇】各地60观众接龙唱《海阔天空》</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688985.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15db88e31e5f2a2c_ttl7dayCNX_909cfa4676f6b6b-150x120.jpg" align ="left"></a>11月27日的节目中，我们发起了“歌声传递感恩 香港海阔天空”的活动。仰赖各位朋友的大力支持！我们共收到世界各地近120份清唱录音.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 1:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688876.md#1" target="_blank">瑞银：中国明年GDP增长恐破六</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688876.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/20180704-hsichiao-hk-03-150x120.jpg" align ="left"></a>临近年底，各金融机构先后对明年经济进行预测、展望，中银和瑞银推测明年中国经济将持续向下，GDP增长会跌破6。有经济学家表示，拉动经济的三驾马车皆“死火”，中国经济面临内外挑战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 1:05 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688272.md#1" target="_blank">95后海归留学生为何选择逃离中国？</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688272.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/WhatsApp-Image-2019-11-28-at-17.46.21-150x120.jpeg" align ="left"></a>一名海归留学生，因为翻墙上网发微博，一夜之间成了中共重点监控对象。在遭受搜查，关押，24/7被监控等种种折磨下，年纪轻轻就不得不选择逃离中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 12:49 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688455.md#1" target="_blank">川普签署香港人权法 港议员谈有四大意义</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1163577500-150x120.jpg" align ="left"></a>美国总统签署香港人权法案后，香港民主派议员认为，川普签署这一法案有四大意义。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688455.md#1" target="_blank">川普签署香港人权法 港议员谈有四大意义</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/trumpcb-150x120.jpg" align ="left"></a>美国总统签署香港人权法案后，香港民主派议员认为，川普签署这一法案有四大意义。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11686982.md#1" target="_blank">美截获6千张来自中国的高仿真假驾照</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11686982.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/12/1512112051521124-150x120.jpg" align ="left"></a>近日，美国海关官员在肯塔基州路易斯维尔（Louisville）的一个国际邮递设施中，缉获了六批货物，其中包含2909张伪造的驾驶执照和3123张空白卡的“半成品”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688268.md#1" target="_blank">字节跳动、华为与中共有何密切关系</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688268.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/AFP-150x120.jpg" align ="left"></a>澳洲智库“澳大利亚战略政策研究所”周四（11月28日）发布的一份新报告发现，抖音海外版TikTok的母公司字节跳动和华为等中国科技巨头正在与共产党紧密合作，对中国西部的新疆维吾尔族进行审查和监视。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 10:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11687729.md#1" target="_blank">高以翔录制陆综殒命 出事前黄秋生曾怒批节目</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11687729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1604100956401487-150x120.jpg" align ="left"></a>35岁的台湾艺人高以翔，11月27日在大陆录制浙江卫视真人秀《追我吧》时因体力不支晕倒，经送医抢救后仍回天无术，噩耗震撼演艺圈。因节目组未能替艺人的安全把关，引发大批网民质疑和炮轰。不过，台湾律师林智群28日在facebook（fb）发文反思时直言不讳地说，“其实身为观众的你我也是共犯之一。”并赞赏地说，出事之前仅有香港艺人黄秋生谴责这类节目是“收买人命”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 8:56 AM							</td></tr>
@@ -28,8 +30,6 @@
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688012.md#1" target="_blank">高以翔录陆综骤逝 传《追我吧》辞退所有人员</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688012.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/f5b5ace38c44f7f79c32f64100545c96-150x120.jpg" align ="left"></a>11月27日凌晨，台湾艺人高以翔在录制浙江卫视《追我吧》节目的奔跑环节时倒地，最终抢救无效，遗憾离世。其命运就如其主演的电视剧《遇见王沥川》的角色——“王沥川”的生命在最好的年华戛然而止，高以翔年仅35岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 8:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688424.md#1" target="_blank">调查发现香港教师对复课有隐忧</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688424.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/a2-1@1200x1200-5-150x120.jpg" align ="left"></a>早前因警民冲突导致交通混乱，更有学生在上课途中遭防暴警察截查，教育局曾一度宣布停课，各学校已先后复课。教协的调查发现教师对复课存在忧虑，当中最多教师忧虑催泪烟残留校园，影响师生健康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 8:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688288.md#1" target="_blank">香港学生领袖访加拿大 呼吁渥京制裁港官</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1173576939-150x120.jpg" align ="left"></a>香港人权活动人士在渥太华访问期间，敦促加拿大政府制定类似“马格尼茨基法案”的法案，对侵犯人权行为负有责任的香港和大陆官员实施制裁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 8:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688169.md#1" target="_blank">环时公布王立强诈骗庭审录像 真实性广遭质疑</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688169.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/19-11-29.55-150x120.jpg" align ="left"></a>中共特工“王立强”近日向澳大利亚投诚，在中港台和澳大利亚引起轩然大波。王立强指证的向心、龚青夫妇已在台湾被扣查。中共则称王立强是被判刑的诈骗犯，官媒环球网更公布了一段庭审录像。不过分析认为，这段模糊的经过剪辑的录像，疑点甚多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 7:12 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688070.md#1" target="_blank">北京抱怨川普签香港法案 却为贸易协议敞大门</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/28/n11688070.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/000_1B99V7-600x400-150x120.jpg" align ="left"></a>《华尔街日报》周四（11月28日）刊文说，北京一方面抱怨美国总统川普（特朗普）签署《香港人权与民主法案》，但另一方面却为跟美国达成贸易协议敞开大门。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 7:04 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11688779.md#1" target="_blank">每日三退声明精选（2019/11/28）</a><br></h3>本人在二十多岁时入党，因年轻无知，对共产党的面目认识不清。随着年龄渐长，尤其出国以后，获得更多资讯，了解到该党对西藏人、新疆人、香港人以及部分大陆人的所作所为，对人权的侵害怵目惊心。我为自己是该党成员感到羞耻。我声明，自2019年11月28日起，本人自愿退出共产党，不再是该党成员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 11:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_3.md#1<br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_3.htm">http://www.epochtimes.com/gb/nsc413_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
