--- a/gb/ncid278_4.md
+++ b/gb/ncid278_4.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>中国人权</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11675009.md#1" target="_blank">中共特工出逃澳洲 揭港台大量中共特务活动</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11675009.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2009/07/907231923212196-150x120.jpg" align ="left"></a>近日一名中共间谍冒着生命危险叛逃到澳大利亚，现在正向澳洲政府提供大量中共如何在国外进行干扰的内部情报。
+
+他的证词表明，中共间谍对香港的民主运动进行渗透、对台湾的总统选举进行操纵、以及对澳大利亚政界进行破坏的情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 6:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11673690.md#1" target="_blank">10月份 至少274名法轮功学员被非法抓捕</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11673690.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2019-11-21-mh-persecution-arrest-oct-3-150x120.png" align ="left"></a>10月份，至少274名法轮功学员被绑架，127人遭骚扰，20人被绑架到洗脑班强制“转化”，77人被非法抄家，至少有39人被中共非法判刑，28人被非法庭审，37人被非法批捕，62人被非法构陷到法院、检察院，4名法轮功学员被迫害致死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 6:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11674879.md#1" target="_blank">科技监控民众 中共镇压藏人方式在大陆扩散</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11674879.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/lobsang1-150x120.jpg" align ="left"></a>流亡藏人行政中央司政洛桑森格星期四（21日）在华盛顿表示，过去几年中国（中共）政府正在把西藏当局镇压藏人的方式输出到中国各地。他呼吁美国政府加强对藏人的支持。
 
 星期四，洛桑森格（Lobsang Sangay）应邀再次在美国传统基金会的一个研讨会上发表演讲。他表示，中国（中共）用现代科技强化对西藏人的监控和压制，利用交通要道上的关卡扫描所有藏人的身份证件.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 6:24 AM							</td></tr>
@@ -25,8 +29,6 @@
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/20/n11669504.md#1" target="_blank">港府称催泪弹成分不宜公开 被疑故意隐暪真相</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/20/n11669504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911180456501501-150x120.jpg" align ="left"></a>在周三（20日）的立法会大会上，香港食物及卫生局局长陈肇始回应议员质询时称，“没有发现催泪烟引致二噁英中毒的情况”。陈又称当局不适宜公开催泪烟成分，并强调“警方保证催泪弹安全”。但有医生指出，二噁英可在人体中潜伏一段时间才发病，呼吁政府尽快公开催泪弹成分，以保障公众健康。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 4:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/20/n11669435.md#1" target="_blank">中共雇凶火烧香港大纪元印刷厂 引各界谴责</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/20/n11669435.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/fire-top-600x400-1-150x120.jpg" align ="left"></a>香港时间周二（11月19日）凌晨，承印香港《大纪元时报》的印刷厂遭中共雇凶纵火，导致部分印刷设备与当日报纸受损。此事件引发各界人士关注。有美国国会众议员在推特上说，大纪元因站出来支持香港抗议、反对中共而在海外受到迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 3:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/20/n11669330.md#1" target="_blank">警惕共产扩张 爱德华兹：香港抗争警示全球</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/20/n11669330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/Screen-Shot-2018-11-21-at-7.52.44-PM-150x120.png" align ="left"></a>美国共产主义受难者基金会主席李?爱德华兹（Lee Edwards）呼吁全球应警惕共产主义的扩张，他表示香港民众抗争中共暴力也是在向世界发出“警示”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 1:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/20/n11669368.md#1" target="_blank">香港法案过关 陆自由派打擦边球庆贺：喝两杯</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/20/n11669368.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/191014205020100615-150x120.jpg" align ="left"></a>美国参议院周二（19日）下午无异议通过了《香港人权与民主法案》，中共方面强烈反弹，多个官方机构“一致”抗议，并严厉管控舆论，但国内的自由派人士则大打擦边球庆祝，“中午给自己加一个菜！”“今天喝两杯！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 1:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/20/n11669237.md#1" target="_blank">【十字路口】港警狂攻中大理大 区选举有变？</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/20/n11669237.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d8e68a412e2e14_ttl7dayz9v_15d8e037030fecf4_ttl7dayne8_20191120-____-___-150x120.jpg" align ="left"></a>为什么香港警方要把大学作为攻击重点？躲在幕后的中共究竟在玩什么把戏？我认为，主要有七个理由。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 1:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11672842.md#1" target="_blank">逾56万人联署 促海牙仲裁法院调查香港警暴</a><br></h3>“反送中”运动至今，警方的暴力事件不断出现，警方更连日包围多间大学施暴，暴行行径受港人以至国际社会的强烈谴责。网民早前在网上发起联署，要求海牙国际常设仲裁法院（Permanent Court of Arbitration, PCA）调查香港警察使用非法武力问题，以及触犯的罪行，截至21日晚上10时，联署人数已超过56万，高于PCA受理请愿的50万个联署要求。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 10:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/21/n11672025.md#1" target="_blank">马国破获网络诈骗大案 抓680名中国嫌犯</a><br></h3>马来西亚移民局宣布在11月20日破获了一起中国人组成的网络外汇诈骗团伙，据悉这是该国史上最大的此类诈骗案，共有680名嫌犯被捕，上百人逃走。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 1:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/21/n11671840.md#1" target="_blank">河北定州4人政府门前下跪请愿 遭公安传唤</a><br></h3>河北定州市部分业主投诉无门，便想出一个办法，去市政府门前下跪请愿，不料这一举动未引来“父母官”的关照，却引来公安的“依法处理”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 1:01 AM							</td></tr>
