--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -1,4 +1,7 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11684044.md#1" target="_blank">乾元：告海外华人书</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11684044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/190612083448100311-600x400-1-150x120.jpg" align ="left"></a>近日来，中共在香港逐渐脱下伪善的外衣，数万名伪装成港警的内地军警进入香港，采用各种高科技的暴力手段镇压学生，甚至制造多起“被自杀”、性侵、酷刑案例。种种暴行，在国际网络上传出，场面令人惊愕，行径令人发指，观之者无不动容，甚至有德国战地记者Enno Lenze亦说，“港警比ISIS更可怕”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:50 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11683960.md#1" target="_blank">谭笑飞：民意不可欺——有感于香港区议会选举</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11683960.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo5105193351925311607_2-600x400-1-150x120.jpg" align ="left"></a>香港区议会选举落幕。此前，笔者没有想到选举能够如期举行，更没有想到泛民主派取得如此规模的胜利。当然，笔者相信泛民主派将在选举中取得重大进展，而其产生的连锁反应是中共无法承受的。所以笔者一直倾向于认为中共会制造各种事端，以此为借口取消或者推迟此次选举，或者在选举中赤裸裸地大规模舞弊。但是选举如期举行有惊无险，而泛民主派的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 2:11 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11683874.md#1" target="_blank">廖祖笙：外出求职被跟踪被套路被劝返</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11683874.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2007/08/708070919341497-150x120.jpg" align ="left"></a>因为生存的需要、尊严的需要、安全的需要、团体的需要等等无一得到合理的满足，我于近期又一次走向远方，在某沿海城市奔波了一天又一天，这之间，我不时被跟踪、被套路、被劝返。这种人权状况确实“比美国好五倍”的实证，足见苟活在“法治国家”何其“幸福”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 1:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11683733.md#1" target="_blank">王友群：曾庆红是香港“暴乱”的幕后黑手</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11683733.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/zengqinghong-150x120.jpg" align ="left"></a>如果习近平不抓捕曾庆红及其死党，香港仍不得安宁；曾乱港的一切罪过，也将会由习承担。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/26/n11682369.md#1" target="_blank">【名家专栏】你超重吗？食品巨头希望如此</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/26/n11682369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-52751242-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="TIANJIN, CHINA - MAY 2: (CHINA OUT) Overweight patients take part in a physical exercise lesson at the Aimin Acupuncture Weight Loss Hospital on May 2, 2005 in Tianjin, China. The hospital specialises in weight loss by means of acupuncture, traditional Chinese medicine, regular exercise and a strictly controlled diet. More than 20 percent of Chinese adults are overweight, according to the International Obesity Task Force. (Photo by China Photos/Getty Images)" align ="left"></a>在美国与世界各地，人们从未如此肥胖。今天，美国男性的平均体重高达194磅（88公斤），女性的平均体重为165磅（74.84公斤）。人们身材的改变，也造就了特殊尺寸的救护车、手术台、棺材，以及飞机和火车上更宽大的座椅。然而，超重不完全是人们的错，而是食品业者们的计划。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 6:57 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/26/n11683213.md#1" target="_blank">周晓辉：川普爆北京秘密 北京沉默以对</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/26/n11683213.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1183652415-600x400-1-150x120.jpg" align ="left"></a>沉默以对，就是不否认，就是默认属实，同时也因为无法回应，所以只能沉默。在无法继续沉默后不得不间接回应，就等于承认了川普的爆料属实，并且暗自表示不满，不满川普“干涉内政”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 5:23 AM			</td></tr>
@@ -20,29 +23,31 @@
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/23/n11676030.md#1" target="_blank">“五毛”网上攻击神韵 曝中共恐惧和邪恶</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/23/n11676030.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/03/GettyImages-519417510-600x400-z-150x120.jpg" align ="left"></a>“五毛”的网攻方向透露中共的恐惧所在。十余年来，神韵演出是中共文字打手和“五毛党”诋毁的主要对象之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 6:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11679153.md#1" target="_blank">程晓容：香港选举掀海啸 击破中共洗脑宣传</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11679153.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo5105193351925311607_2-150x120.jpg" align ="left"></a>本次香港选举告诉中共：香港人要的，是一个没有中共的香港。同样，大陆人民盼望的，是一个没有中共的新中国。如果大陆人民也能拥有一人一票的权利，中共立马下台。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 6:32 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11679177.md#1" target="_blank">【投书】解散中国共产党与共产主义的宣言</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11679177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/ZJMD_videoPage_thumbnail_1200x800-150x120.jpg" align ="left"></a>一个恶魔，它自己穿上了政党的外衣、政权的裤子、政治的帽子、政府的鞋子，它又戴上了法制的假发、道德的面具。左手拿着集体的斧头、右手拿着阶级的镰刀。它用血染红了两块布，它将斧头和镰刀放在了一块布上，又在另一块布上画了五颗星。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 5:03 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678879.md#1" target="_blank">王友群：中共在香港发射超万个催泪弹</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678879.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911172004042188-600x400-1-150x120.jpg" align ="left"></a>香港正遭受有史以来数量最多、密度最大的催泪弹毒气祸害。
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11684254.md#1" target="_blank">云鹤天：响亮的耳光</a><br></h3>香港高等法院
+判禁蒙面违宪
+一记响亮耳光
+打烂林郑嘴脸
 
-40多个团体组成的“全港反送中联席”根据香港警方公布的数字统计，6月12日至11月13日，港警发射至少9362个催泪弹。11月18日，港警发射1458个催泪弹。11月19日，发射1567个催泪弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:51 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678617.md#1" target="_blank">海风：全球剿共 哪些华人或入“高危名单”？</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Final_C1_Local-News_April_20190918-600x400-150x120.jpg" align ="left"></a>中共利用特工和侨团在海外大搞红色渗透，并借助“千人计划”、“孔子学院”、“一带一路”等名目在全球挖人才、盗窃知识产权、收卖各国官员、组织培养海外“红卫兵”、收卖媒体等行为，早已触动了各国政府的敏感神经。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:45 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/24/n11676839.md#1" target="_blank">何坚：“五毛党”攻击神韵的三种伎俩</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/24/n11676839.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/CCP-internet-commenters@1200x1200-150x120.jpg" align ="left"></a>一年一度的神韵艺术团世界巡回演出即将开启。象征中华传统文化、代表世界顶级艺术水平的神韵演出，十余年来在舞台上塑造的诸多人物形象，已在世界各国观众心中扎下了根。其中之一的“美猴王”，火眼金睛能识破妖邪，脍炙人口。殊不知，神韵晚会也能赋予每位观众一双“火眼金睛”，助人明是非、识正邪，包括识破中共“五毛党”散布的千百种谎言.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:40 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678116.md#1" target="_blank">朱同：机关算尽太聪明 反误了卿卿性命</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678116.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911170742592188-150x120.jpg" align ="left"></a>最近香港黑警在港理工玩“瓮中捉鳖”，自以为得计，号称绝对忠诚中共、迫害同胞勇毅、心系监控社会。完全不知道黑警自己只是小鳖，连中共大鳖都已经朝不保夕、命在旦夕了，居然还在助纣为虐，典型的不见棺材不掉泪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:53 AM			</td></tr>
+美国参众两院
+通过人权法案
+一记响亮耳光
+打烂林郑嘴脸......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11684231.md#1" target="_blank">金浴凤：月儿弯弯照九州</a><br></h3>沉沉神州暗夜长，一轮明月似香港；
+清光照得专制慌，乱射烟幕去遮挡；
+转见新月又挂苍，赵家无措心抓狂；
+更烦无数黑天鹅，越黑越飞没法防。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11684206.md#1" target="_blank">吐为快：选票见证民主香</a><br></h3>鱼目混珠徒为妄，大劫洗浴珠更亮;
+干儿丑戏跌下场，傀儡禁蒙违宪章;
+鲜血浇灌花更芳，荣光必定归香港;
+土共且收臭皮囊，耻叫世人戳脊梁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 3:21 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/27/n11683930.md#1" target="_blank">林泉：港民区选告捷莫轻敌</a><br></h3>港民区选倒乾坤，铁掌横击党一尊。
+战友相拥抛喜泪，亲朋共庆启香槟。
+争求民主尸盈海，博取自由血满身。
+切莫轻松看死鬼，黎明前夜化毒喷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 1:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/26/n11681521.md#1" target="_blank">云鹤天：清平乐 三无房地产</a><br></h3>高楼林立，
 视野全封闭。
 两座楼间无足距，
 不得阳光沐浴。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 2:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11679554.md#1" target="_blank">杜彼得：出其不意 破之必也 华人在美 庄敬自强</a><br></h3>很多人以为美中的贸易冲突，使华人尴尬，刚开始时也许有一点，但是一年多以来，大家已坦然。真正使华人处境微妙的是，美国两大党之争，由上而下，到了地方，“激进左派”的主张，使理性的华人不知何去何从？尤其是若身处比较敏感的州，左也不是、右也不对，面对地方小范围的选举，你又不得不与自由派接触、合作，因为在民主制度的国家，任何选举.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 12:45 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678848.md#1" target="_blank">慧声：诗三首</a><br></h3>大纪元好
-
-大笔如椽九评出世地动天惊
-纪事载文讲清真相民众唤醒
-元始声明三退潮起澎湃汹涌
-好人平安善恶必报天灭中共......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:11 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678674.md#1" target="_blank">【投书】曝光中共治理下大陆的黑暗</a><br></h3>在高喊依法治国的今天，大陆各个部门表现出的怪像已经彻底无药可救，具体表现为每一个阶层每一个行业几乎没有一个敢说真话的人，敢说真话的都会被看成另类或者加以孤立，不管在何岗位何环境不能有与中共邪党不同的声音，人人活着没有安全感，没有幸福感，作为大陆一名从事法律行业二十多年的中国人，我想我有义务站出来把真实的大陆告诉世人，让.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:01 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678104.md#1" target="_blank">理悟：贺美国参众两院通过《香港人权与民主法案》</a><br></h3>天降神器缚红魔，
-携雷带闪魔胆破。
-大祸临头如何好？
-跳脚嚼舌粥一锅。
-肆虐香港警横行，
-自做自受种苦果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ijwoue2416/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ijwoue2416/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
