--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678879.md#1" target="_blank">王友群：中共在香港发射超万个催泪弹</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678879.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911172004042188-600x400-1-150x120.jpg" align ="left"></a>香港正遭受有史以来数量最多、密度最大的催泪弹毒气祸害。
+
+40多个团体组成的“全港反送中联席”根据香港警方公布的数字统计，6月12日至11月13日，港警发射至少9362个催泪弹。11月18日，港警发射1458个催泪弹。11月19日，发射1567个催泪弹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:51 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678617.md#1" target="_blank">海风：全球剿共 哪些华人或入“高危名单”？</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Final_C1_Local-News_April_20190918-600x400-150x120.jpg" align ="left"></a>中共利用特工和侨团在海外大搞红色渗透，并借助“千人计划”、“孔子学院”、“一带一路”等名目在全球挖人才、盗窃知识产权、收卖各国官员、组织培养海外“红卫兵”、收卖媒体等行为，早已触动了各国政府的敏感神经。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:45 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/24/n11676839.md#1" target="_blank">何坚：“五毛党”攻击神韵的三种伎俩</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/24/n11676839.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/CCP-internet-commenters@1200x1200-150x120.jpg" align ="left"></a>一年一度的神韵艺术团世界巡回演出即将开启。象征中华传统文化、代表世界顶级艺术水平的神韵演出，十余年来在舞台上塑造的诸多人物形象，已在世界各国观众心中扎下了根。其中之一的“美猴王”，火眼金睛能识破妖邪，脍炙人口。殊不知，神韵晚会也能赋予每位观众一双“火眼金睛”，助人明是非、识正邪，包括识破中共“五毛党”散布的千百种谎言.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678116.md#1" target="_blank">朱同：机关算尽太聪明 反误了卿卿性命</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678116.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911170742592188-150x120.jpg" align ="left"></a>最近香港黑警在港理工玩“瓮中捉鳖”，自以为得计，号称绝对忠诚中共、迫害同胞勇毅、心系监控社会。完全不知道黑警自己只是小鳖，连中共大鳖都已经朝不保夕、命在旦夕了，居然还在助纣为虐，典型的不见棺材不掉泪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:53 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/24/n11677723.md#1" target="_blank">程晓农：中国模式步入困境</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/24/n11677723.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1125286990-150x120.jpg" align ="left"></a>从经济困境到官场的“囚徒困境”，再到道德困境，说明中共确实在经济、政治、社会三个主要方面都陷入了困境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:39 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/24/n11677857.md#1" target="_blank">张菁：京津冀阴霾严重 中共处理方式逻辑可笑</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/24/n11677857.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1172684508-600x400-150x120.jpg" align ="left"></a>虽然这两件事情已经过去多年了，但是纵观中共在处理公共事务上的方式和方法，似乎并没有任何改变，只是更加狂妄，更加变本加厉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 5:55 AM			</td></tr>
@@ -14,12 +19,12 @@
 感谢各位在百忙之中阅读我这封很早以前就想发出的呼吁，非常感谢您们一直以来默默为香港繁荣发展做出的不懈努力和精诚奋斗，香港之所以成为世界首屈一指的繁荣的国际金融中心，最重要的是依靠您们一直以来的努力和奋斗建设而成，而您们之所以愿意在这里奋斗，最根本的是因为您们相信香港的民主、法治、公平、正义会保护您们付出的艰.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 5:22 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/23/n11675562.md#1" target="_blank">向真：中共洗脑撼动不了正信</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/23/n11675562.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/8b9424c510618e2c45f0b1672e5f2e68-450x300-1-150x120.jpg" align ="left"></a>一九九九年七月中共与江氏集团发动全面镇压法轮功，成立专责迫害法轮功的黑机关“六一零办公室”，执行“肉体上消灭、经济上搞垮、名誉上搞臭”的灭绝政策，迄今至少有四千三百多名修炼者被迫害致死，难以计数的法轮功学员在劳教所与监狱中遭受惨绝人寰的各种酷刑折磨，甚至被活体摘取器官、遭贩售牟利并焚尸灭迹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 1:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11675052.md#1" target="_blank">王友群：美国重击 鼠疫来袭 习近平往哪去</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11675052.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1172509081-600x400-150x120.jpg" align ="left"></a>11月20日，美国参众两院分别通过的《香港人权与民主法》，经整合后，在众议院以压倒性多数通过。这是5个多月来美国对中共疯狂镇压香港反送中运动作出的强硬反击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 6:45 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11674875.md#1" target="_blank">周晓辉：基辛格见习近平为何避称老朋友？</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11674875.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1059035984-150x120.jpg" align ="left"></a>让基辛格、欧伦斯等中共的“老朋友”失望的是，北京政权不但没有接受他们的药方，反而一再在贸易谈判过程中戏弄美国，一再对外彰显其的邪恶。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 5:45 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11674744.md#1" target="_blank">颜丹：近30万英国人的诉求说明了什么？</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11674744.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191113010833166-150x120.jpg" align ="left"></a>当中共在墙内大肆散播如今香港之乱是暴徒作乱的消息时，墙外不少国家却在纷纷谴责港府林郑对“反送中”港民的暴力镇压。就在今年10月，英国人迪兰·库玛（Deeran Kumar）在Change.org上发起征签，要求英国内政部永久撤销林郑家人，包括其丈夫和两个儿子的英国国籍。
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678848.md#1" target="_blank">慧声：诗三首</a><br></h3>大纪元好
 
-库玛在向英国内政部递交的请愿书上写道，林郑.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 4:51 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11674262.md#1" target="_blank">王赫：中国人安全梦魇（3）</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11674262.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/12/1412120744182534-150x120.jpg" align ="left"></a>纵观中共建政后的70年，无数的中国人或死于政治运动（含“大三年饥荒”的中共历次政治运动，杀人至少8000万），或尚未来到人世就被戕杀（强制计划生育，据《中国卫生统计年鉴2010》，1980年到2009年，人工引流产2.75亿例，实际数字更多），或死于“人祸”勾连之“天灾”（中共严控相关数据，70年死亡总数当以千万计）.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:59 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11673471.md#1" target="_blank">程晓容：国际风云印证《九评》精准论断</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/22/n11673471.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911120304312188-150x120.jpg" align ="left"></a>《九评》关乎中国和世界。这部巨著能够帮助人们深入了解中国现当代史及共产主义运动，从而对中共的言行及动机做出清醒的判断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 4:45 PM			</td></tr>
+大笔如椽九评出世地动天惊
+纪事载文讲清真相民众唤醒
+元始声明三退潮起澎湃汹涌
+好人平安善恶必报天灭中共......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678674.md#1" target="_blank">【投书】曝光中共治理下大陆的黑暗</a><br></h3>在高喊依法治国的今天，大陆各个部门表现出的怪像已经彻底无药可救，具体表现为每一个阶层每一个行业几乎没有一个敢说真话的人，敢说真话的都会被看成另类或者加以孤立，不管在何岗位何环境不能有与中共邪党不同的声音，人人活着没有安全感，没有幸福感，作为大陆一名从事法律行业二十多年的中国人，我想我有义务站出来把真实的大陆告诉世人，让.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 2:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/25/n11678104.md#1" target="_blank">理悟：贺美国参众两院通过《香港人权与民主法案》</a><br></h3>天降神器缚红魔，
 携雷带闪魔胆破。
