--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ijwoue2416/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://gitlab.com/szzdlab/djy/raw/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691398.md#1" target="_blank">穆迪：陆企明年债务违约将继续攀升</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691398.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1312310333481528-600x400-150x120.jpg" align ="left"></a>美国信用评级机构穆迪表示，由于经济增长乏力，以及政府试图减少对负债企业的支持，2020年债务违约的中国企业数量将继续上升。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691370.md#1" target="_blank">香港抗暴近半年 5890人遭拘捕 最小仅11岁</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691370.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911172004042188-600x400-1-1-150x120.jpg" align ="left"></a>香港自6月爆发反修例抗争以来，截至11月29日，港警共拘捕5890人，最小者年仅11岁，被捕人士中约有四是学生。
+
+今天（11月30日），香港儿童事务委员会举行交流会，政务司司长张建宗在会后表示，截至29日共有5890人被捕，当中2345人是学生，占被捕人士中的四成，其中的910人不足18岁。
+
+根据香港警方29日公布的数据，至今已有5890人遭到拘.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691219.md#1" target="_blank">曹德旺：大陆实际有消费能力者不足3亿人</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691219.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-97203104-600x400-150x120.jpg" align ="left"></a>中国玻璃大厂福耀集团董事长曹德旺日前表示，中国拥有真正消费能力的人不到3亿，甚至可能只有2亿。曹德旺的说法得到了大陆官方的证实。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691274.md#1" target="_blank">王立强共谍案 台湾向澳洲提司法互助</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691274.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/505fa504a8ce10df481ea24386519d34-600x400-1-1-150x120.jpg" align ="left"></a>被王立强指是中共高级特务的香港中国创新投资公司主席向心夫妇已被台湾司法单位限制出境，11月29日傍晚，台北地检署透过法务部向澳洲提出司法互助，请求取得王立强在澳指控资料。
+
+中央社报导，法务部官员表示，现行台湾与澳洲虽没有签定司法互助协议，但办案单位可透过两年前通过的国际刑事司法互助法，向澳洲提出司法互助请求个案协助。
+
+据了解，北检29日傍晚完成司.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/26/n11682661.md#1" target="_blank">反送中事件中 中共一直重复的几大谎言</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/26/n11682661.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911140909242188-150x120.jpg" align ="left"></a>中共的历次政治运动都是媒体先行，靠谎言欺骗民众，靠暴力维持统治。本次香港反送中运动中，中共也是不断在重复着谎话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691127.md#1" target="_blank">【拍案惊奇】11月围城发生什么？数据惊人</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691127.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15dbd68a474e46e6_ttl7day4H5_20191129-l-150x120.jpg" align ="left"></a>本期节目包括：港警11月围城发生什么？数字告诉你；十万人集会谢美国护港法，多国跟进，陆国防部撂狠话；区选后议员支招防分化；谈接龙唱歌活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691229.md#1" target="_blank">“非新闻”创办人卢昱宇狱中紧急求救</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691229.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/d50b2defa8f175e6df02b4d61bc02d5a-600x400-150x120.png" align ="left"></a>曾持续关注大陆群体维权事件的“非新闻”创办人卢昱宇被中共判刑四年。近期，他因患严重抑郁症向外界求救，希望律师紧急介入，希望在狱中能够得到有效治疗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:21 PM							</td></tr>
@@ -24,10 +36,6 @@
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690397.md#1" target="_blank">反对建火葬场茂名村民再罢市 特警进村抓人</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690397.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/IMG_9377-1-150x120.jpg" align ="left"></a>广东茂名化州市文楼镇村民抗议建火葬场与警察激烈冲突之后，11月29日，镇上的村民以罢市方式持续抗议，在各个村中仍然继续发着流血冲突，大批村民被打伤、被抓，具体人数不详。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690190.md#1" target="_blank">新一批大陆人权迫害者名单 递美加英澳新政府</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690190.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1-160-800x450-1-600x400-1-150x120.jpg" align ="left"></a>本周，美国、加拿大、英国、澳大利亚及新西兰的法轮功学员将最新整理出的一批迫害法轮功的恶人名单递交给本国政府，要求依法对这些恶人拒发签证、甚至冻结资产。这是继九月份递交名单之后法轮功学员的又一次多国同步行动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690483.md#1" target="_blank">掌掴男子 央视女记者孔琳琳在英国获罪</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690483.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/12/1610171049542525-150x120.jpg" align ="left"></a>中共央视驻伦敦记者孔琳琳被指控袭击罪，周五（11月29日），一名英国法官判处她普通袭击罪名成立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 4:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690379.md#1" target="_blank">香港人权法发酵 日本或取消习近平国事访问</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690379.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/02/1502081731211528-150x120.jpg" align ="left"></a>本周三美国总统川普（特朗普）签署了《香港人权与民主法案》后，在西方社会引起多米诺骨牌效应。这可能迫使日本考虑是否取消习近平明年春季到日本的国事访问。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690303.md#1" target="_blank">法国标致雪铁龙中国失利 长安PSA退出中国</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690303.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1024px-Le-siege-de-psa-a-rueil-malmaison-pres-de-paris-le-2-octobre-2017_5969754-150x120.jpg" align ="left"></a>法国标致雪铁龙集团在中国的合资项目连连失利，“长安标致雪铁龙”将全面退出中国、另一家“神龙汽车”持续亏损。中国汽车行业正值寒冬，汽车企业纷纷陷入生存困境。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:58 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690279.md#1" target="_blank">谍案发酵 中国创新“台湾女婿”高管闪辞</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/78155849_2798707956845991_5087302248585756672_o-150x120.jpg" align ="left"></a>中国创新投资公司主席向心及妻子龚青，被前特工王立强指控是中共在港台的特务头子，遭台北地检署列为被告，双双限制出境。27日，中国创新宣布2名独立非执行董事陈永光及李永恒从当日起辞任。其中陈永光是台湾人，也是台籍前主播陈若华的丈夫，此时突然请辞引发关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690361.md#1" target="_blank">吉林前书记高狄病亡 曾因卷入邓江斗而丢官</a><br></h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/29/n11690361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/03/1308262045372039-150x120.jpg" align ="left"></a>中共吉林省委前书记、人民日报社社长高狄，10月26日病亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 1:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/19/11/30/n11691222.md#1" target="_blank">广西一患者右肾取石 医生在左腰开刀</a><br></h3>本月中旬，广西北海人民医院发生一起医疗事故。患者刘先生接受全麻下右肾取石手术，没想到，主刀医生弄错了手术部位，却开到腰部左侧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ijwoue2416/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
